syntax = "proto3";


message UpdateMoney {
    int64 token = 1;
    int64 ticket = 2;
    int64 gold = 3;
}

